src/pages/es/v1.18.0/rn-sdk/modules.mdx
---
title: "SDK de React Native - Módulos"
metaTitle: "SDK de React Native - Módulos"
metaDescription: "Lista de módulos públicos del SDK de React Native"
---
import LinkRow from '~/components/LinkRow.astro'
import Aside from '~/components/Aside.astro'
import ORCard from '~/components/Card/ORCard.astro'

El SDK de React Native exporta varios componentes y métodos para que personalices tu grabación:

## Connector

```js
interface IORTrackerConnector {
  startSession: (
    projectKey: string,
    optionsDict: Options,
    projectUrl?: string
  ) => void;
  setMetadata: (key: string, value: string) => void;
  event: (name: string, payload?: string) => void;
  setUserID: (userID: string) => void;
  userAnonymousID: (userID: string) => void;
}
```

- [startSession()](/rn-sdk/start): inicia la grabación.
- [setMetadata()](/rn-sdk/set-metadata): Establece un campo de metadatos y lo guarda como parte de la grabación.
- [event()](/rn-sdk/event): Envía eventos personalizados para que se registren como parte de tus reproducciones con este método.
- [setUserID()](/rn-sdk/set-user-id): Identifica a tus usuarios con este método.
- [patchNetwork()](/rn-sdk/patch-network): Parchea fetch y/o XMLHttpRequest para registrar las solicitudes de red.
- 
## Components

<div class="or-rowlist">
  <LinkRow href="/rn-sdk/touch" title="ORTouchTrackingView" icon="canvas" desc="Vista usada para rastrear eventos táctiles." />
  <LinkRow href="/rn-sdk/sanitization" title="ORSanitizedView" icon="settings" desc="Vista que te permite sanear (o difuminar) partes de tu grabación" />
  <LinkRow href="/rn-sdk/inputs" title="ORTrackedInput" icon="metadata" desc="TextInput que registra eventos de entrada" />
  <LinkRow href="/rn-sdk/analytics" title="ORAnalyticsView" icon="ai" desc="Vista marcada que envía un evento una vez que se ve en la pantalla y cuando sale de ella" />
</div>
